fix textarea overflow

--- a/app/assets/stylesheets/templates/blog.scss
+++ b/app/assets/stylesheets/templates/blog.scss
@@ -67,8 +67,16 @@ body{
   display: none;
 }
 
-#comment--form-table>tbody>tr>td{
+#comments--form--table > tbody > tr > td{
   padding: 5px 0 5px 0;
+  &:first-child{
+    vertical-align: top;
+  }
+}
+
+#comments--form--table--textarea{
+  width: 50vw;
+  max-width: 55vw;
 }
 
 .comment--name{
